Single and multiple fronts tests separated. Maven will run all tests despite failed ones.